render improvements